Closed Bug 1735588 Opened 3 years ago Closed 3 years ago

Permafailing macOS "Assertion failure: NS_IsMainThread(), at /builds/worker/checkouts/gecko/gfx/thebes/gfxFontEntry.cpp:131" when shared font list is disabled

Categories

(Core :: Graphics: Text, defect)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 - fixed
firefox93 --- wontfix
firefox94 --- wontfix
firefox95 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jfkthame)

Details

(Keywords: assertion, intermittent-failure, Whiteboard: [stockwell needswork:owner])

Attachments

(1 file)

The InitFontList thread is only safe when the shared font list is enabled; the legacy font objects are main-thread-only, so when the shared list is preffed off we should not attempt to move the initialization off to another thread.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED

Landed a patch on ESR91 to make gfx.font-list-omt.enabled unconditionally false there to fix the failures. Jonathan's going to write a more generic patch for this too which can land on all trees.
https://hg.mozilla.org/releases/mozilla-esr91/rev/c6f05ffc58100f4b85a11d340a3f23ba5e35dce8

No need to track this for ESR91 anymore given comment 3.

Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fa35ddf21ee6
Only allow the OMT InitFontList thread to be used if the shared font list is enabled. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Did you want to uplift this to ESR91 for completeness' sake?

Flags: needinfo?(jfkthame)

I guess it'd make sense. With the default prefs we're shipping, it's harmless/irrelevant, but it potentially makes things more robust for people who try tweaking their prefs. And as patches go, it's about as safe as they come. :)

Flags: needinfo?(jfkthame)

Comment on attachment 9245753 [details]
Bug 1735588 - Only allow the OMT InitFontList thread to be used if the shared font list is enabled. r=lsalzman

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is irrelevant for users with the defaults we ship, but makes things more robust for anyone who starts tweaking their font-list prefs.
  • User impact if declined: Possible thread-safety issues if users adjust prefs.
  • Fix Landed on Version: 95
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just adds a simple pref-check to avoid using an unsupported mix of features.
  • String or UUID changes made by this patch:
Attachment #9245753 - Flags: approval-mozilla-esr91?

Comment on attachment 9245753 [details]
Bug 1735588 - Only allow the OMT InitFontList thread to be used if the shared font list is enabled. r=lsalzman

Approved for 91.4esr.

Attachment #9245753 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: