Bug 1735588 - Only allow the OMT InitFontList thread to be used if the shared font list is enabled. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D128393